--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <H1>Bienvenidos</H1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nisi cumque eius similique ut nesciunt deserunt, temporibus reiciendis atque dolorem?</p>
+
 </body>
 </html>
